FIX | Input appearance on firefox

--- a/components/Input/style.module.scss
+++ b/components/Input/style.module.scss
@@ -51,6 +51,8 @@
     }
 
     &[type="number"] {
+      -moz-appearance: textfield;
+
       &::-webkit-inner-spin-button,
       &::-webkit-outer-spin-button {
         -webkit-appearance: none;
